pdf with correct align detail text

--- a/admin/src/Components/Seal/Seal1/styles.css
+++ b/admin/src/Components/Seal/Seal1/styles.css
@@ -78,7 +78,7 @@
 .seal1-text.seal1-center {
   font-size: 10px;
   font-weight: bold;
-  margin-top: 50px;
+  /* margin-top: 50px; */
   font-family: Arial, Helvetica, sans-serif;
 }
 
